# ros2-robotino

./: README.md  rec-rpc_1.6.1_amd64.deb  robotino-api2_1.1.14_amd64.deb  robotino-daemons_2.0.17_amd64.deb  robotino-dev_1.0.3_amd64.deb
robotino_description/: CMakeLists.txt  package.xml
robotino_description/launch/: robotino_description.launch.py
robotino_description/meshes/sensors/: Sharp_IR_Sensor_GP2Y0A41SK0F.dae
robotino_description/urdf/components/: robotino_body_source.urdf.xacro  robotino_parts.urdf.xacro
robotino_description/urdf/robots/: robotino_description_plugin.xacro  robotino_ros2control.xacro
robotino_description/urdf/sensors/: Sharp_IR_Sensor.urdf.xacro
robotino_msgs/: CMakeLists.txt  package.xml
robotino_msgs/msg/: AnalogReadings.msg  DigitalReadings.msg  EncoderReadings.msg  GripperState.msg  MotorReadings.msg  PowerReadings.msg
robotino_node/: CMakeLists.txt  package.xml
robotino_node/include/robotino_node/: AnalogInputArrayROS.hpp  ComROS.hpp  DigitalOutputArrayROS.hpp  DistanceSensorArrayROS.hpp  EncoderInputROS.hpp  MotorArrayROS.hpp  OdometryROS.hpp  OmniDriveROS.hpp  PowerManagementROS.hpp  RobotinoCameraNode.hpp  RobotinoLaserRangeFinderNode.hpp  RobotinoNode.hpp  RobotinoOdometryNode.hpp
robotino_node/launch/: only_robotino_node.launch  robotino_node.launch
robotino_node/src/: AnalogInputArrayROS.cpp  BumperROS.cpp  CameraROS.cpp  ComROS.cpp  DigitalInputArrayROS.cpp  DigitalOutputArrayROS.cpp  DistanceSensorArrayROS.cpp  ElectricalGripperROS.cpp  EncoderInputROS.cpp  LaserRangeFinderROS.cpp  MotorArrayROS.cpp  OdometryROS.cpp  OmniDriveROS.cpp  PowerManagementROS.cpp  RobotinoCameraNode.cpp  RobotinoLaserRangeFinderNode.cpp  RobotinoNode.cpp  RobotinoOdometryNode.cpp  robotino_camera_node.cpp  robotino_laserrangefinder_node.cpp  robotino_node.cpp  robotino_odometry_node.cpp
rto_description/: CMakeLists.txt  package.xml
rto_description/launch/: robotino_description.launch.py
rto_description/meshes/.svn/: all-wcprops  entries
rto_description/meshes/parts/.svn/: all-wcprops  entries
rto_description/meshes/sensors/.svn/: all-wcprops  entries
rto_description/rviz/: robotino_description.rviz
rto_description/urdf/.svn/: all-wcprops  entries
rto_description/urdf/.svn/text-base/: robotino.urdf.xacro.svn-base  robotino_body.urdf.xacro.svn-base  robotino_parts.urdf.xacro.svn-base  robotino_platform.urdf.xacro.svn-base
rto_description/urdf/components/: robotino_body.urdf.xacro  robotino_parts.urdf.xacro
rto_description/urdf/robots/: robotino.urdf  robotino.urdf.xacro  robotino_description.urdf  robotino_description.urdf.xacro  robotino_description_plugin.xacro
rto_description/urdf/sensors/: Sharp_IR_Sensor.urdf.xacro  asus_xtion_pro.urdf.xacro  hokuyo.urdf.xacro
rto_description/urdf/sensors/.svn/: all-wcprops  entries
rto_msgs/: CMakeLists.txt  package.xml
rto_msgs/msg/: AnalogReadings.msg  DigitalReadings.msg  EncoderReadings.msg  GripperState.msg  MotorErroReadings.msg  MotorErrorReadings.msg  MotorReadings.msg  PowerReadings.msg
rto_msgs/srv/: SetVelLimits.srv
rto_node/: CMakeLists.txt  package.xml
rto_node/include/rto_node/: AnalogInputArrayROS.hpp  BumperROS.hpp  CameraROS.hpp  DigitalInputArrayROS.hpp  DigitalOutputArrayROS.hpp  DistanceSensorArrayROS.hpp  ElectricalGripperROS.hpp  EncoderInputROS.hpp  GyroscopeROS.hpp  LaserRangeFinderROS.hpp  MotorArrayROS.hpp  OdometryROS.hpp  OmniDriveROS.hpp  PowerManagementROS.hpp  RTOCameraNode.hpp  RTOLaserRangeFinderNode.hpp  RTONode.hpp  RTOOdometryNode.hpp
rto_node/launch/: only_robotino_node.launch  robotino_driver.launch.py  robotino_driverbringup.launch.py  robotino_simple_node.launch  robotino_simple_node.py  robotino_tfbroadcaster.launch.py
rto_node/scripts/: robotino_teleop.py
rto_node/src/: AnalogInputArrayROS.cpp  BumperROS.cpp  CameraROS.cpp  ComROS.cpp  DigitalInputArrayROS.cpp  DigitalOutputArrayROS.cpp  DistanceSensorArrayROS.cpp  ElectricalGripperROS.cpp  EncoderInputROS.cpp  GyroscopeROS.cpp  LaserRangeFinderROS.cpp  MotorArrayROS.cpp  OdometryROS.cpp  OmniDriveROS.cpp  PowerManagementROS.cpp  RTOCameraNode.cpp  RTOLaserRangeFinderNode.cpp  RTONode.cpp  RTOOdometryNode.cpp  rto_camera_node.cpp  rto_laserrangefinder_node.cpp  rto_node.cpp  rto_odometry_node.cpp
rto_node/urdf/components/: robotino_body.urdf.xacro
rto_node/urdf/robots/: Robotino3.urdf  robotino_3_source.urdf
rto_safety/: CMakeLists.txt  package.xml
rto_safety/include/rto_safety/: RTOSafetyNode.hpp
rto_safety/src/: RTOSafetyNode.cpp  rto_safety_node.cpp
