<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rto_safety</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="martin.nagele@student.tugraz.at">martin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rto_node</build_depend>
  <depend>rto_msgs</depend>
  <exec_depend>rto_node</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
